implementacao de regras para salvar usuarios

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,6 @@ campo.descricao.obrigatorio = O campo descrição é obrigatorio
 campo.preco.obrigatorio = O campo preço é obrigatorio
 campo.data.obrigatorio = O campo data é obrigatorio
 campo.cliente.obrigatorio = O campo cliente é obrigatorio
+
+campo.login.obrigatorio = O campo username é obrigatorio
+campo.senha.obrigatorio = O campo senha é obrigatorio
