Ajustes em UsuarioService e messages.properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,5 +7,5 @@ campo.preco.obrigatorio = O campo preço é obrigatorio
 campo.data.obrigatorio = O campo data é obrigatorio
 campo.cliente.obrigatorio = O campo cliente é obrigatorio
 
-campo.login.obrigatorio = O campo username é obrigatorio
+campo.login.obrigatorio = O campo login é obrigatorio
 campo.senha.obrigatorio = O campo senha é obrigatorio
